--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,7 +168,7 @@ set(SOURCES src/main.cpp
     src/domain/combat/attacker.h
     src/domain/combat/defender.cpp
     src/domain/combat/defender.h
-    )
+    src/gui/views/help.cpp src/gui/views/help.h)
 
 include_directories(third_party/json/src
     third_party/di-cpp14/include
