--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,7 +163,6 @@ set(SOURCES src/main.cpp
     src/domain/map/ai/states/move_state.h
     src/domain/map/ai/states/dead_state.h
     src/domain/map/ai/states/dead_state.cpp
-    src/domain/map/ai/states/state.cpp
     src/domain/map/ai/states/state.h
     src/domain/combat/attacker.cpp
     src/domain/combat/attacker.h
@@ -171,7 +170,8 @@ set(SOURCES src/main.cpp
     src/domain/combat/defender.h
     src/gui/views/help.cpp src/gui/views/help.h
     src/domain/combat/ai_controlled.cpp src/domain/combat/ai_controlled.h
-    src/domain/mayor/mayor.cpp src/domain/mayor/mayor.h)
+    src/domain/mayor/mayor.cpp src/domain/mayor/mayor.h
+    )
 
 
 include_directories(third_party/json/src
