--- a/data/config.json
+++ b/data/config.json
@@ -3,6 +3,8 @@
     "title": "City Defence"
   },
   "window": {
+    "width": 1400,
+    "height": 900,
     "background_color": "0xFF6495ED",
     "debug": true
   }
